--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flip-move": "^3.0.5",
+    "react-hotkeys-hook": "^4.4.1",
     "react-spinners-kit": "^1.9.1",
     "zod": "^3.20.2"
   },
