--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.3.2",
+    "classnames": "^2.3.2",
     "js-sha512": "^0.8.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
